--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,73 +1,53 @@
 name: flutter_app
-description: "Retail Pro - Comprehensive POS System for retail businesses"
-publish_to: 'none'
-
+description: Professional Point of Sale System with Firebase
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-
-  # UI & Icons
-  cupertino_icons: ^1.0.8
+  
+  # Core UI
+  cupertino_icons: ^1.0.2
   
   # State Management
   flutter_riverpod: 2.6.1
   
-  # Local Database (Offline-First)
-  drift: ^2.20.0
-  sqlite3_flutter_libs: ^0.5.0
-  path_provider: ^2.1.0
-  path: ^1.9.0
+  # Firebase (Web-compatible versions)
+  firebase_core: 3.6.0
+  cloud_firestore: 5.4.3
+  firebase_auth: 5.3.1
+  firebase_storage: 12.3.2
   
-  # Navigation
-  go_router: 14.6.2
+  # Security
+  crypto: 3.0.6
   
-  # Charts & Analytics
+  # Utilities
+  intl: 0.19.0
+  uuid: 4.5.1
+  
+  # Charts & Visualization
   fl_chart: 0.70.1
   
-  # Barcode & QR
-  mobile_scanner: 5.2.3
+  # QR Code
   qr_flutter: 4.1.0
-  barcode_widget: 2.0.4
   
-  # PDF & Printing
+  # PDF Generation (web-compatible)
   pdf: 3.11.1
   printing: 5.13.4
   
-  # Date & Time
-  intl: 0.20.1
+  # Share functionality
+  share_plus: 10.1.3
   
-  # Networking (for future sync)
+  # HTTP requests
   http: 1.5.0
-  
-  # Local Storage
-  shared_preferences: 2.5.3
-  
-  # Image Handling
-  image_picker: 1.1.2
-  cached_network_image: 3.4.1
-  
-  # Utilities
-  uuid: 4.5.1
-  collection: 1.19.1
-  
-  # Firebase
-  firebase_core: 3.6.0
-  firebase_auth: 5.3.1
-  cloud_firestore: 5.4.3
-  firebase_storage: 12.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  
-  # Drift Code Generation
-  drift_dev: ^2.20.0
+  flutter_lints: ^2.0.0
   build_runner: ^2.4.0
 
 flutter:
@@ -76,4 +56,3 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-    - assets/products/
